# presupuesto_back

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 001_baseline_mssql.py  001_init_schemas.py  002_core.py  002_observacion_respuesta.py  003_catalogo.py  004_usuarios_seed.py  005_ejecucion.py  006_usuarios_por_vp.py  007_solicitudes.py  008_planillas_extra.py  009_snapshots.py  010_adjuntos_linea.py  011_observaciones_snapshots.py  012_obs_modificar_parametro.py  013_remove_etapa_objetivos.py  014_objetivos_estrategicos.py  015_usuarios_extra_planilla.py  016_username_passwords.py  017_perdiem_columna.py  018_fecha_estimada.py  019_consultores_cant_monto.py  020_gastos_admin_item.py  021_gastos_admin_columnas_calc.py  022_salarios_simplificar.py  023_salarios_matriz_estricta.py  024_angel_sin_vp.py  025_angel_vpe_con_extra.py  026_integridad_y_indices.py  027_endurecer_passwords_demo.py  028_tarifas_misiones.py  029_auditoria_login.py  030_workflow_vp.py  031_evento_accion_vp.py  032_fix_fk_linea_created_by.py  _tarifas_data.json
app/: config.py  db.py  main.py  security.py
app/api/: analisis.py  auth.py  catalogo.py  ejecucion.py  planificacion.py  solicitudes.py
app/domain/: authz.py  calculo.py  enums.py
app/models/: __init__.py  catalogo.py  core.py  planificacion.py
app/schemas/: catalogo.py
scripts/: seed_users.py
tests/: conftest.py  test_ajustes_features.py  test_auth.py  test_authz_scope.py  test_concurrencia.py  test_observaciones_rbac.py  test_workflow_vp.py
